fixed links overlap for mobile devices touch

--- a/style.css
+++ b/style.css
@@ -627,6 +627,13 @@ footer {
   #gallery article p {
     font-size: 30px;
   }
+
+  /* Contact Section & Footer*/
+  #contact .container #contacts-container ul li a {
+    display: block;
+    width: fit-content;
+    margin: auto;
+  }
 }
 
 @media (max-width: 500px) {
